syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Games.Services";

import "games_requests.proto";
import "games_responses.proto";

package edoxa.services.games;

service GameService {
  rpc FindPlayerGameCredential(FindPlayerGameCredentialRequest) returns (FindPlayerGameCredentialResponse);
  rpc FindChallengeScoring(FindChallengeScoringRequest) returns (FindChallengeScoringResponse);
  rpc FetchChallengeMatches(FetchChallengeMatchesRequest) returns (stream FetchChallengeMatchesResponse);
}